feat: switch to jspecify annotations (#599)